# term-coder

./: .gitignore  ADVANCED_TERMINAL_SUMMARY.md  ADVANCED_UI_IMPLEMENTATION.md  LANGUAGE_AWARE_IMPLEMENTATION.md  PRIVACY_SECURITY_IMPLEMENTATION.md  README.md  design.md  pyproject.toml  requirements.md  tasks.md  test_advanced_features.py  test_comprehensive_access.py  test_final_implementation.py  test_live_model_switch.py  test_model_switching.py  test_real_llm.py
.bmad-core/: install-manifest.yaml
.kiro/steering/: product.md  structure.md  tech.md
.term-coder/: config.yaml  index.tsv  last_run.json  last_test.json  privacy.json  vectors.jsonl
.term-coder/audit/: audit_202508.jsonl
.term-coder/sessions/: default.jsonl
docs/: advanced-usage.md  cli-reference.md  configuration.md  faq.md  getting-started.md  plugin-development.md  troubleshooting.md
examples/: README.md
examples/basic/: first-steps.md
src/term_coder/: __init__.py  advanced_terminal.py  agent.py  audit.py  branding.py  cli.py  config.py  context.py  editor.py  enhanced_repl.py  errors.py  explain.py  fixer.py  framework_commands.py  generator.py  gittools.py  index.py  interactive_terminal.py  language_aware.py  llm.py  lsp.py  main.py  (+20 more)
src/term_coder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_audit.py  test_context.py  test_error_handling.py  test_hybrid.py  test_integration_privacy.py  test_language_aware.py  test_llm.py  test_natural_interface.py  test_security.py  test_semantic.py  test_tui_integration.py  test_ui_components.py
